tests/snapshots/output/measurement__ltv_list.snap
---
source: tests/cli/snapshots.rs
---
$ vendo measurement ltv list
exit: 0
--- stdout ---
 Cohort      Segment  Size   LTV 30d  LTV 90d  LTV 12m  CAC     CAC:LTV 
 2026-08-01  all      1,200  $42.50   $85.25   —        $20.00  0.23    
 2026-07-01  all      980    $38.00   $80.00   —        $25.00  0.31    
2 cohorts
