tests/snapshots/output/measurement__methodologies_list_json.snap
---
source: tests/cli/snapshots.rs
---
$ vendo measurement methodologies list --json
exit: 0
--- stdout ---
{
  "data": {
    "methodologies": [
      {
        "id": "m-system-1",
        "account_id": null,
        "name": "Last click",
        "description": null,
        "click_path_model": "last_click",
        "ensemble_weights": {
          "click_path": 1
        },
        "signal_params": null,
        "is_system": true,
        "version": 1,
        "created_at": null,
        "updated_at": null
      },
      {
        "id": "m-account-2-with-a-long-id",
        "account_id": "acct-1",
        "name": "Blended",
        "description": "Click path and survey",
        "click_path_model": "linear",
        "ensemble_weights": {
          "2": 5,
          "click_path": 0.7,
          "survey_response_share": 0.3333333,
          "mmm": null
        },
        "signal_params": null,
        "is_system": false,
        "version": 3,
        "created_at": null,
        "updated_at": null
      },
      {
        "id": "m-3",
        "account_id": "acct-1",
        "name": "No weights",
        "description": "",
        "click_path_model": "first_click",
        "ensemble_weights": {},
        "signal_params": null,
        "is_system": false,
        "version": null,
        "created_at": null,
        "updated_at": null
      }
    ]
  }
}
