tests/snapshots/output/measurement__rules_preview_json.snap
---
source: tests/cli/snapshots.rs
---
$ vendo measurement rules preview --from 2026-09-01 --to 2026-09-30 --json
exit: 0
--- stdout ---
{
  "previews": [
    {
      "context": {
        "campaign_objective": "sales",
        "channel_grouping": null,
        "custom_label": ""
      },
      "sample_count": 12,
      "resolved_methodology": {
        "id": "m-system-1",
        "name": "Last click",
        "click_path_model": "last_click"
      },
      "matched_rule_id": null,
      "via": "default_fallback"
    },
    {
      "context": {
        "campaign_objective": null,
        "channel_grouping": "Paid Social",
        "custom_label": "promo"
      },
      "sample_count": 1234,
      "resolved_methodology": {
        "id": "m-account-2-with-a-long-id",
        "name": "Blended",
        "click_path_model": "linear"
      },
      "matched_rule_id": "r1",
      "via": "rule"
    }
  ],
  "total_distinct_contexts": 2
}
